--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 ECHO ¤w±Ò°Ê¡C
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+
+    <script src="js/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+
+    <script>
+        var ji = document.getElementById("output");
+        var j2 = document.getElementsByClassName("output")[0];
+
+        var jq1 = $('#output');
+        var jq2 = $('.output');
+
+        console.log(ji);
+        console.log(j2);
+        console.log(jq1);
+        console.log(jq2);
+    </script>
+</head>
+<body>
+    <div id="output">ID</div>
+    <div class="output">CLASS</div>
+   
+</body>
+</html>
